classDiagram
    class AbstractUser

    class CustomUser {
        +phone_number
        +address
        +city
        +state
        +pincode
        +driving_license
        +is_blocked
        +created_at
        +updated_at
        +__str__()
        +get_active_bookings_count()
    }

    class Car {
        +name
        +brand
        +model_year
        +category
        +fuel_type
        +transmission
        +seating_capacity
        +price_per_day
        +is_available
        +is_featured
        +location
        +created_at
        +updated_at
        +__str__()
        +get_features_list()
    }

    class Booking {
        +pickup_date
        +return_date
        +pickup_location
        +drop_location
        +total_days
        +price_per_day
        +total_cost
        +status
        +special_requests
        +admin_notes
        +created_at
        +updated_at
        +__str__()
        +save()
        +can_cancel()
        +get_status_badge_class()
    }

    class Review {
        +rating
        +comment
        +created_at
        +__str__()
    }

    class ContactMessage {
        +name
        +email
        +phone
        +subject
        +message
        +is_read
        +created_at
        +__str__()
    }

    AbstractUser <|-- CustomUser
    CustomUser "1" --> "0..*" Booking
    Car "1" --> "0..*" Booking
    Booking "1" --> "0..1" Review
    CustomUser "1" --> "0..*" Review
    Car "1" --> "0..*" Review
